--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  background-color: #0d1117;
+  color: #c9d1d9;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
